--- a/src/sass/cta.scss
+++ b/src/sass/cta.scss
@@ -1,4 +1,19 @@
-#cta-box {
+@import "neumorphic-shapes";
+
+.cta-headline {
+  font-size: var(--cta-font-size-large);
+  font-family: var(--serif-font-family);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+  padding-bottom: 10px;
+}
+
+.cta-bodytext {
+  font-size: var(--cta-font-size);
+  font-family: var(--sans-serif-font-family);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+}
+
+#cta-box-desk {
   display: block;
   background: rgba(255, 255, 255, 0.13);
   backdrop-filter: blur(5px);
@@ -13,28 +28,64 @@
   bottom: calc(6vh + 110px);
   right: 60px;
   padding: 1.2em 1em 0.6em;
-  color: var(--cta-font-colour);
   .cta-headline {
-    font-size: var(--cta-font-size-large);
-    font-family: var(--serif-font-family);
-    text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.3);
-    padding-bottom: 10px;
+    color: var(--cta-font-colour-light);
   }
-  font-size: var(--cta-font-size);
-  font-family: var(--sans-serif-font-family);
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.4);
+  .cta-bodytext {
+    color: var(--cta-font-colour-light);
+  }
+}
+
+#cta-box-mobile {
+  display: block;
+  width: 67%;
+  height: fit-content;
+  height: -moz-fit-content;
+  margin: 0 auto;
+  background-color: var(--accent-color-3);
+  padding: 1.2em 1em 0.6em;
+  text-align: center;
+
+  // simple neimorphic rectangle block
+  border-radius: 10px;
+  @include neumorphism($distance, $blur, $intensity);
+
+  .cta-headline {
+    color: var(--cta-font-colour-dark);
+  }
+  .cta-bodytext {
+    color: var(--cta-font-colour-dark);
+    text-shadow: none;
+  }
 }
 
 @media only screen and (orientation: portrait) {
   // shift cta box to the center
-  #cta-box {
+  #cta-box-desk {
     right: 32%;
+  }
+
+  #cta-box-mobile {
+    display: none;
   }
 }
 
 // Mobile & Tablet
 @media only screen and (max-width: 800px) {
-  #cta-box {
+  #cta-box-desk {
     display: none;
+  }
+  #cta-box-mobile {
+    display: block;
+  }
+}
+
+// Desktop
+@media only screen and (min-width: 800px) {
+  #cta-box-mobile {
+    display: none;
+  }
+  #cta-box-desk {
+    display: block;
   }
 }
