--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -11,7 +11,7 @@
   position: absolute;
   bottom: 16vh;
   color: #dddddd;
-  text-shadow: 1px 2px 0 rgba(0, 0, 0, 0.5);
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.5);
 
   .tagline-text {
     display: block;
