--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -28,6 +28,7 @@
   --primary-color: rgb(210, 31, 38);
   --accent-color-1: rgb(219, 61, 69);
   --accent-color-2: rgb(177, 36, 28);
+  --accent-color-3: #ebebeb;
   --body-text-color: #fff;
   --thin-font-weight: 300;
   --medium-font-weight: 400;
@@ -37,5 +38,6 @@
   --image-credit-font-colour: #ddd;
   --cta-font-size-large: calc(28px + 0.3vw);
   --cta-font-size: calc(12px + 0.3vw);
-  --cta-font-colour: #ececec;
+  --cta-font-colour-light: #ececec;
+  --cta-font-colour-dark: #555555;
 }
